--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 * grab all links from pdftribute.net (not just from the first page)
 
+* remove array that holds PDF URLs (memory hog)
+
 * refine recursive searches of depths greater than 1
