--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+* for recursive searches, eliminate URLs that point to the current page
+
 * add user agent to WWW::Mechanize object (use agent_alias())
 
 * remove array that holds PDF URLs (memory hog)
