--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
-* for recursive searches, eliminate URLs that point to the current page
+* for recursive searches, igonre URLs that point to the current page
 
 * use HTTP HEAD request before GET to ensure page is HTML
+
+* for recursive searches, do breadth-first instead of depth-first
 
 * remove array that holds PDF URLs (memory hog)
