Added checked_url hash which urls are checked against to prevent duplicate work, fixed urls_to_crawl hash so that it no longer contains multiple hashes and parent urls (bug)

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-* before checking a url, check if it's been checked already
+* before blacklisting a url for HTTP error, check for a network connection error
 
 * catch signals like SIGINT and SIGTERM to do cleanup
 
